--- a/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/enter_code"
+        android:textAllCaps="true"
         android:textColor="@color/red"
         android:textSize="20dp"
         android:textStyle="bold" />
@@ -24,7 +25,10 @@
         <EditText
             android:id="@+id/code_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:gravity="center_horizontal"
+            android:padding="16dp" />
     </FrameLayout>
 
     <TextView
