--- a/kartwheel/app/src/main/res/layout/fragment_welcome.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_welcome.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
 
@@ -25,7 +25,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
-                android:hint="@string/first_name" />
+                android:hint="@string/first_name"
+                android:nextFocusDown="@+id/last_name"
+                android:nextFocusRight="@+id/last_name" />
 
             <EditText
                 android:id="@+id/last_name"
@@ -34,7 +36,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
-                android:hint="@string/last_name" />
+                android:hint="@string/last_name"
+                android:nextFocusDown="@+id/email"
+                android:nextFocusRight="@+id/email" />
         </LinearLayout>
 
         <LinearLayout
@@ -51,7 +55,9 @@
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:hint="@string/email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:nextFocusDown="@+id/cell"
+                android:nextFocusRight="@+id/cell" />
 
             <EditText
                 android:id="@+id/cell"
@@ -60,7 +66,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
-                android:hint="@string/cell" />
+                android:hint="@string/cell"
+                android:inputType="phone"
+                android:nextFocusDown="@+id/birth"
+                android:nextFocusRight="@+id/birth" />
         </LinearLayout>
 
         <EditText
@@ -71,7 +80,8 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:hint="@string/dob" />
+            android:hint="@string/dob"
+            android:inputType="date" />
 
         <EditText
             android:id="@+id/nickname"
