--- a/kartwheel/app/src/main/res/layout/fragment_game_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_game_info.xml
@@ -1,42 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/enter_code"
-        android:textAllCaps="true"
-        android:textColor="@color/red"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/background_code_input"
-        android:elevation="5dp">
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/code_edit_text"
+
+        <TextView
+            style="@style/GameInfoTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/your_team" />
+
+        <us.handstand.kartwheel.layout.GameInfoPlayerView
+            android:id="@+id/playerOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:gravity="center_horizontal"
-            android:padding="16dp" />
-    </FrameLayout>
+            android:layout_margin="16dp"
+            app:playerName="Matthew Ott"
+            app:playerNumber="1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:autoLink="web"
-        android:gravity="center_horizontal"
-        android:text="@string/does_not_have_code" />
+        <us.handstand.kartwheel.layout.GameInfoPlayerView
+            android:id="@+id/playerTwo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:playerName="Gil Levy"
+            app:playerNumber="2" />
 
-</LinearLayout>
+        <TextView
+            style="@style/GameInfoTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/where_when" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/event_when_where" />
+
+        <TextView
+            style="@style/GameInfoTitleStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/the_items" />
+
+        <us.handstand.kartwheel.layout.ItemView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:description="@string/event_banana"
+            app:src="@mipmap/item_banana"
+            app:title="@string/banana" />
+
+        <us.handstand.kartwheel.layout.ItemView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:description="@string/event_acorn"
+            app:src="@mipmap/red_turtle"
+            app:title="@string/acorn" />
+
+        <us.handstand.kartwheel.layout.ItemView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:description="@string/event_earthquake"
+            app:src="@mipmap/item_earthquake"
+            app:title="@string/earthquake" />
+
+    </LinearLayout>
+</ScrollView>
