--- a/kartwheel/app/src/main/res/layout/fragment_tos.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_tos.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/logo"
         android:text="@string/tos" />
 
-    <ScrollView
+    <us.handstand.kartwheel.layout.TOSScrollView
         android:id="@+id/tos_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,5 +33,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tos_content" />
-    </ScrollView>
+    </us.handstand.kartwheel.layout.TOSScrollView>
 </RelativeLayout>
