--- a/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
@@ -28,7 +28,10 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center_horizontal"
-            android:padding="16dp" />
+            android:imeOptions="actionGo"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:singleLine="true" />
     </FrameLayout>
 
     <TextView
