--- a/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_code_entry.xml
@@ -32,6 +32,15 @@
             android:maxLines="1"
             android:padding="16dp"
             android:singleLine="true" />
+
+        <android.support.v4.widget.ContentLoadingProgressBar
+            android:id="@+id/networkProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="16dp"
+            android:visibility="gone" />
     </FrameLayout>
 
     <TextView
