Refactored TicketActivity to TicketController

--- a/kartwheel/app/src/main/res/layout/activity_ticket.xml
+++ b/kartwheel/app/src/main/res/layout/activity_ticket.xml
@@ -34,36 +34,18 @@
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/title"
-        android:layout_marginBottom="72dp" />
+        android:layout_above="@+id/button"
+        android:layout_below="@+id/title" />
 
-    <LinearLayout
-        android:id="@+id/buttonPanel"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/additional_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="@string/contact_us"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            android:visibility="gone"
-            app:backgroundTint="@color/green" />
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="@string/scroll_down"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            app:backgroundTint="@color/grey_button_disabled" />
-    </LinearLayout>
+        android:enabled="false"
+        android:padding="16dp"
+        android:text="@string/scroll_down"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        app:backgroundTint="@color/grey_button_disabled" />
 </RelativeLayout>
