update instead of insert user

--- a/kartwheel/app/src/main/res/layout/fragment_welcome.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_welcome.xml
@@ -81,7 +81,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:hint="@string/dob"
-            android:inputType="date" />
+            android:inputType="date"
+            android:nextFocusDown="@+id/nickname"
+            android:nextFocusRight="@+id/nickname" />
 
         <EditText
             android:id="@+id/nickname"
