--- a/kartwheel/app/src/main/res/layout/activity_launch.xml
+++ b/kartwheel/app/src/main/res/layout/activity_launch.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@mipmap/group" />
+        android:text="Launched" />
 </FrameLayout>
