--- a/kartwheel/app/src/main/res/values/colors.xml
+++ b/kartwheel/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">@color/blue</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="grey_button_disabled">@android:color/darker_gray</color>
-    <color name="blue">@android:color/holo_blue_bright</color>
-    <color name="red">@android:color/holo_red_dark</color>
-    <color name="green">@android:color/holo_green_dark</color>
+    <color name="blue">#00D5FF</color>
+    <color name="red">#FF4200</color>
+    <color name="green">#3ECF8E</color>
+    <color name="yellow">#FFC000</color>
+    <color name="textLightGrey">#E1E1E1</color>
+    <color name="textDarkGrey">#8C8C8C</color>
+    <color name="textDarkestGrey">#4A4A4A</color>
 </resources>
