--- a/kartwheel/app/src/main/res/layout/activity_logged_in.xml
+++ b/kartwheel/app/src/main/res/layout/activity_logged_in.xml
@@ -9,19 +9,19 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/blue_background">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:elevation="5dp"
-            app:tabBackground="@color/blue"
+            android:background="@android:color/white"
+            android:elevation="10dp"
             app:tabGravity="center"
-            app:tabIndicatorColor="@android:color/white"
-            app:tabIndicatorHeight="8dp"
-            app:tabSelectedTextColor="@android:color/white" />
+            app:tabIndicatorColor="@color/green"
+            app:tabIndicatorHeight="8dp" />
     </android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
