--- a/kartwheel/app/src/main/res/values/colors.xml
+++ b/kartwheel/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="grey_button_disabled">@android:color/darker_gray</color>
     <color name="blue">#00D5FF</color>
+    <color name="blue_background">#7E00d5ff</color>
     <color name="red">#FF4200</color>
     <color name="green">#3ECF8E</color>
     <color name="yellow">#FFC000</color>
