Stability improvements for race list

--- a/kartwheel/app/src/main/res/layout/view_holder_race_summary.xml
+++ b/kartwheel/app/src/main/res/layout/view_holder_race_summary.xml
@@ -14,7 +14,7 @@
         android:layout_alignTop="@+id/content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="8dp"
-        android:background="@drawable/background_race_list_time"
+        android:background="@drawable/background_race_list_time_red"
         android:elevation="5dp"
         android:gravity="center"
         android:padding="16dp"
@@ -47,7 +47,7 @@
             android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="0.5 miles" />
+            tools:text="1 lap | 0.5 miles" />
 
         <TextView
             android:id="@+id/spotsLeft"
