Start work on signing up for race screen

--- a/kartwheel/app/src/main/res/values/attrs.xml
+++ b/kartwheel/app/src/main/res/values/attrs.xml
@@ -10,4 +10,7 @@
         <attr name="playerNumber" format="string" />
         <attr name="isUser" format="boolean" />
     </declare-styleable>
+    <declare-styleable name="TopCourseTimeView">
+        <attr name="rank" format="integer" />
+    </declare-styleable>
 </resources>
