--- a/kartwheel/app/src/main/res/values/styles.xml
+++ b/kartwheel/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryDark">@color/green</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="TicketContentTitleStyle">
