--- a/kartwheel/app/src/main/res/layout/fragment_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_race_sign_up.xml
@@ -25,6 +25,13 @@
                 android:layout_height="200dp"
                 android:layout_alignParentTop="true" />
 
+            <us.handstand.kartwheel.layout.BatteryWarningView
+                android:id="@+id/batteryWarning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/signUpButton"
+                android:layout_margin="16dp" />
+
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/signUpButton"
                 android:layout_width="wrap_content"
