--- a/kartwheel/app/src/main/res/layout/fragment_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_race_sign_up.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/signUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/flag"
+        app:fabSize="normal" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -23,19 +33,8 @@
                 android:id="@+id/batteryWarning"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/signUpButton"
+                android:layout_above="@+id/contentPanel"
                 android:layout_margin="16dp" />
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/signUpButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/mapViewOverlay"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="-28dp"
-                android:layout_marginRight="16dp"
-                android:src="@drawable/flag"
-                app:fabSize="normal" />
 
             <LinearLayout
                 android:id="@+id/contentPanel"
@@ -45,24 +44,34 @@
                 android:background="@android:color/white"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/raceName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="24dp"
-                    android:gravity="center_horizontal"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
-                    tools:text="Racey McPlaceholder" />
-
-                <TextView
-                    android:id="@+id/raceDescription"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
+                    android:background="@color/blue"
                     android:gravity="center_horizontal"
-                    tools:text="2 laps | 1.14 miles" />
+                    android:orientation="vertical"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:id="@+id/raceName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        tools:text="Racey McPlaceholder" />
+
+                    <TextView
+                        android:id="@+id/raceDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:textColor="@android:color/white"
+                        tools:text="2 laps | 1.14 miles" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/raceCountdownTitle"
@@ -154,7 +163,11 @@
                     android:layout_marginLeft="24dp"
                     android:layout_marginRight="24dp"
                     app:rank="3" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="72dp" />
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
-</FrameLayout>
+</RelativeLayout>
