--- a/kartwheel/app/src/main/res/layout/fragment_mini_game_type.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_mini_game_type.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/miniGameTypeRecyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:listitem="@layout/view_holder_mini_game_type" />
+    android:layout_height="match_parent">
+
+    <!--TODO: Use ItemDecorations for the title to make this not terrible looking-->
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="40dp"
+        android:gravity="center_horizontal"
+        android:text="@string/mini_game_title"
+        android:textAllCaps="true"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/miniGameTypeRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title"
+        tools:listitem="@layout/view_holder_mini_game_type" />
+</RelativeLayout>
