--- a/kartwheel/app/src/main/res/layout/view_battery_warning.xml
+++ b/kartwheel/app/src/main/res/layout/view_battery_warning.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="8dp"
     tools:orientation="horizontal"
+    android:gravity="center_horizontal"
     tools:parentTag="LinearLayout">
 
     <TextView
