--- a/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true" />
-
-    <fragment xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment"
         android:name="us.handstand.kartwheel.fragment.race.RaceSignUpFragment"
         android:layout_width="match_parent"
